# Network-Traffix

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: api.py  config.py  db.py  models_orm.py  register_model.py  schemas_predict.py
backend/app/inference/: explain.py  feature_extract.py  feature_pipeline.py  model.py  row_parser.py
backend/app/services/: predict_service.py
backend/tests/: test_db_and_models.py
frontend/: app.js  dashboard.html  predict.html  styles.css
ml/: features.json  parity_check.py  preprocess.py  preprocessor.json  train.py
ml/artifacts/: features.json
